--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -11,12 +11,12 @@ jobs:
 
     steps:
       - name: Checkout código
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4  # Atualizar para v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Configurar Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5  # Atualizar para v5
         with:
           python-version: "3.11"
 
@@ -38,10 +38,11 @@ jobs:
         run: python monitor_antt.py
 
       - name: Fazer upload dos arquivos HTML para depuração
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4  # Atualizar para v4
         with:
           name: html-outputs
           path: response_antt_selenium_*.html
+          retention-days: 7  # Manter artefatos por 7 dias
 
       - name: Commit se houve atualização
         run: |
