--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -5,18 +5,22 @@ on:
     - cron: "0 10 * * *"  # Roda todo dia às 07h Brasília
   workflow_dispatch:      # Permite rodar manualmente
 
+permissions:
+  contents: write  # Permite escrita no repositório
+  actions: read    # Permite leitura das ações
+
 jobs:
   run-monitor:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout código
-        uses: actions/checkout@v4  # Atualizar para v4
+        uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Configurar Python
-        uses: actions/setup-python@v5  # Atualizar para v5
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
@@ -37,12 +41,15 @@ jobs:
           EMAIL_TO: ${{ secrets.EMAIL_TO }}
         run: python monitor_antt.py
 
-      - name: Fazer upload dos arquivos HTML para depuração
-        uses: actions/upload-artifact@v4  # Atualizar para v4
+      - name: Fazer upload dos arquivos HTML e log para depuração
+        uses: actions/upload-artifact@v4
         with:
-          name: html-outputs
-          path: response_antt_selenium_*.html
-          retention-days: 7  # Manter artefatos por 7 dias
+          name: debug-outputs
+          path: |
+            response_antt_selenium_*.html
+            noticias_log.txt
+            ultima_resolucao.txt
+          retention-days: 7
 
       - name: Commit se houve atualização
         run: |
